Update index and styles

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -30,6 +30,13 @@ img {
 	max-width: 100%;
 }
 
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
 body {
 	height: 100vh;
 	font-family: "Roboto", sans-serif;
