--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,12 +1,9 @@
-@import './vars';
-@import './fonts';
-
+@import "./vars";
+@import "./fonts";
 
 html {
 	box-sizing: border-box;
 }
-
-
 
 *,
 *::after,
@@ -18,6 +15,7 @@ ul,
 ol,
 li {
 	list-style: none;
+	
 }
 
 a {
@@ -26,19 +24,23 @@ a {
 }
 
 img {
-	vertical-align: top;
+	border: 0;
 	max-width: 100%;
+}
+
+input {
+	outline: none;
 }
 
 input,
 button,
 textarea,
 select {
-  font: inherit;
+	font: inherit;
 }
 
 body {
-	height: 100vh;
+	min-height: 100vh;
 	font-family: "Roboto", sans-serif;
 	font-size: 16px;
 	font-weight: 700;
@@ -52,23 +54,18 @@ body {
 	grid-template-columns: 15.625rem 1fr;
 	grid-template-rows: 5.625rem 1fr 5.625rem;
 	gap: 8px;
-	// grid-template-areas:
-	// "aside header"
-	// "aside main"
-	// "footer footer";
-	min-height: 100vh;
+	height: 100vh;
 	padding: calc($--panel-gap);
-	// background-color: #000;
-	background-color: #444B53;
+	background-color: #444b53;
 	color: $white;
 	overflow: hidden;
 }
 
 .icon {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  stroke-width: 0;
-  stroke: #fff;
-  fill: #fff;
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	stroke-width: 0;
+	stroke: #fff;
+	fill: #fff;
 }
