--- a/src/scss/base/_icon.scss
+++ b/src/scss/base/_icon.scss
@@ -1,6 +1,3 @@
-
-
-
 .bx {
 	height: 3.125rem;
 	font-size: 1.25rem;
@@ -13,7 +10,42 @@
 	color: $white;
 }
 
-.icon {
+.icons {
 	fill: #fff;
+	width: 20px;
+	height: 20px;
+}
+
+.player__icon {
+	&--prev,
+	&--play,
+	&--pause,
+	&--next {
+		width: 30px;
+		height: 30px;
+	}
+
+	&--prev:hover,
+	&--play:hover,
+	&--pause:hover,
+	&--next:hover,
+	&--like:hover,
+	&--shuffle:hover,
+	&--repeat:hover {
+		opacity: .6;
+	}
+
+	&--volume {
+		fill: white;
+		fill-opacity: .6;
+		width: 20px;
+		height: 20px;
+	}
+
+	&--volume:hover {
+		fill: #ffff;
+		fill-opacity: 4;
+	}
+
 }
 
