--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,12 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
-//font-family: 'Roboto', sans-serif;
+// font-family: 'Roboto', sans-serif;
 
+@font-face {
+  font-family: 'Roboto';
+  src: url(../../fonts/Roboto-Regular.woff2) format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url(../../fonts/Roboto-Medium.woff2) format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url(../../fonts/Roboto-Bold.woff2) format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url(../../fonts/Roboto-Black.woff2) format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
 
-// @font-face {
-// 	font-family: '';
-// 	src: url();
-// 	font-style: normal;
-// 	font-weight: normal;
-// 	font-display: swap;
-// }
+// Regular 400
+// Medium 500
+// Bold 700
+// Black 900
