--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,132 +1,247 @@
 .footer {
-	grid-area: 3 / 1 / 4 / 3;
-	border-radius: 15px;
-	background-color: $body-bg;
-	padding: 1rem 1rem;
-	overflow: hidden;
+  // grid-area: 3 / 1 / 4 / 3;
+  grid-area: footer;
+  height: 90px;
+  width: 100%;
+  border-radius: 15px;
+  background-color: $body-bg;
+  overflow: hidden;
 }
 
+.output-power {
+  opacity: 0;
+  padding: 2px 7px;
+  background-color: #ff7300;
+  border-radius: 150px 150px 150px 0px / 150px 150px 150px 88px;
+  z-index: 2;
+}
+
+.seek-bar {
+  -webkit-appearance: none;
+  height: 0.2rem;
+  background-color: rgba(255, 255, 255, 0.31);
+  outline: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.seek-bar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #ff7300;
+}
+
+.seek-bar::-moz-range-thumb {
+  -webkit-appearance: none;
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  border: none;
+  background-color: #ff7300;
+}
+
+.button--centered {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
 .player {
-	display: grid;
-	grid-template-columns:
-		12.625rem 2.25rem minmax(6.625rem, 0.5fr)
-		2.25rem 2.25rem minmax(28.19rem, auto) 2.25rem;
-	grid-template-rows: 58px;
-	align-items: center;
-
-	&__controls {
-		grid-area: 1 / 1 / 2 / 2;
-		display: flex;
-		align-items: center;
-		gap: 11px;
-		padding: 8px;
-	}
-
-	&__button {
-		margin: 0;
-		display: grid;
-		justify-content: center;
-		align-items: center;
-		padding: 5px;
-		background-color: $body-bg;
-	}
-
-	&__button--volume {
-		grid-area: 1 / 2 / 2 / 3;
-	}
-
-	&__info {
-		grid-area: 1 / 3 / 2 / 4;
-		display: grid;
-		grid-template-columns: 2.8125rem auto;
-		grid-template-rows: auto auto;
-		column-gap: 0.44rem;
-		align-items: center;
-		justify-items: stretch;
-		padding: 5px 5px;
-		overflow: hidden;
-	}
-
-	&__image {
-		grid-area: 1 / 1 / 3 / 2;
-		width: 2.8125rem;
-		height: 2.8125rem;
-		background-position: center;
-		background-size: cover;
-	}
-
-	&__title-song {
-		grid-area: 1 / 2 / 2 / 3;
-		color: #fff;
-		font-size: 0.9375rem;
-		font-style: normal;
-		font-weight: 700;
-		line-height: normal;
-		text-overflow: ellipsis;
-	}
-
-	&__title-performer {
-		grid-area: 2 / 2 / 3 / 3;
-		color: #c4c4c4;
-		font-size: .6rem;
-		font-style: normal;
-		font-weight: 500;
-		line-height: normal;
-		letter-spacing: 1px;
-		text-overflow: ellipsis;
-	}
-
-	&__button--like {
-		grid-area: 1 / 4 / 2 / 5;
-	}
-	&__button--shuffle {
-		grid-area: 1 / 5 / 2 / 6;
-	}
-
-	&__time {
-		grid-area: 1 / 6 / 2 / 7;
-		position: relative;
-		display: flex;
-		align-items: center;
-		gap: 8px;
-	}
-
-	&__output-power {
-		display: none;
-		position: absolute;
-		bottom: 17px;
-		left: 13px;
-		padding: 2px 7px;
-		background-color: #ff7300;
-		border-radius: 10px 10px 0 10px;
-	}
-
-	&__seek-bar {
-		-webkit-appearance: none;
-		width: 40vh;
-		height: 0.2rem;
-		background-color: rgba(255, 255, 255, 0.31);
-		outline: none;
-		border-radius: 15px;
-		cursor: pointer;
-	}
-
-	&__seek-bar::-webkit-slider-thumb {
-		position: relative;
-		-webkit-appearance: none;
-		width: 0.625rem;
-		height: 0.625rem;
-		border-radius: 50%;
-		background-color: #ff7300;
-		z-index: 2;
-	}
-
-	&__repeat {
-		grid-area: 1 / 7 / 2 / 8;
-	}
+  display: grid;
+  grid-template-columns:
+    246px min-content minmax(200px, 400px) repeat(2, auto) repeat(
+      2,
+      min-content
+    )
+    repeat(2, auto) min-content repeat(2, auto);
+  align-items: center;
+  column-gap: 16px;
+  height: 100%;
+  padding: 0 2.875rem 0 1.75rem;
 }
 
-.player__button {
-	border: none;
-	cursor: pointer;
+.controls {
+  grid-area: 1 / 1 / 2 / 2;
+  display: flex;
+  gap: 42px;
+  padding-right: 2.5625rem;
+  &__button {
+    width: 35px;
+    height: 35px;
+    padding: 3px 4px;
+  }
+}
+
+.volume {
+  grid-area: 1 / 2 / 2 / 3;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 0 1rem 0 0;
+  &__button {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+
+  &__slider {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 0;
+    transition: width 0.5s ease-in-out;
+  }
+  &__slider.visible {
+    width: 90px;
+    transition: width 0.5s ease-in-out;
+  }
+
+  &__output-power {
+    position: absolute;
+    left: 1.875rem;
+    top: 0.625rem;
+  }
+
+  &__seek-bar {
+    opacity: 0;
+    width: 100%;
+    margin: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+
+  &__seek-bar::-moz-range-thumb {
+    position: relative;
+    width: 0px;
+    height: 0px;
+    transition: 0.5s ease-in-out;
+  }
+  &__seek-bar::-webkit-slider-thumb {
+    position: relative;
+    width: 0px;
+    height: 0px;
+    transition: 0.5s ease-in-out;
+  }
+
+  &__seek-bar.visible::-moz-range-thumb {
+    width: 8px;
+    height: 8px;
+    transition: 0.5s ease-in-out;
+  }
+
+  &__seek-bar.visible::-webkit-slider-thumb {
+    width: 8px;
+    height: 8px;
+    transition: 0.5s ease-in-out;
+  }
+
+  &__seek-bar.visible {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+  }
+}
+
+.song-info {
+  grid-area: 1 / 3 / 2 / 4;
+  display: grid;
+  justify-content: start;
+  padding-right: 5px;
+  &__grid {
+    grid-area: 1 / 3 / 2 / 5;
+    display: grid;
+    grid-template-columns: 2.8125rem auto;
+    grid-template-rows: auto auto auto;
+    align-items: center;
+    column-gap: 0.44rem;
+    padding: 20px 0;
+    overflow: hidden;
+    text-transform: uppercase;
+  }
+
+  &__image {
+    grid-area: 1 / 1 / 4 / 2;
+    width: 2.8125rem;
+    height: 2.8125rem;
+    background-position: center;
+    background-size: cover;
+  }
+
+  &__song-name {
+    grid-area: 1 / 2 / 2 / 3;
+    font-size: 0.9375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #fff;
+  }
+
+  &__song-artist {
+    grid-area: 2 / 2 / 3 / 3;
+    color: #c4c4c4;
+    font-size: 0.6rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-overflow: ellipsis;
+  }
+
+  &__song-year {
+    grid-area: 3 / 2 / 4 / 3;
+    color: #c4c4c4;
+    font-size: 0.6rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 1px;
+  }
+}
+
+.favorite {
+  grid-area: 1 / 6 / 2 / 7;
+  padding: 35px 0;
+}
+
+.shuffle {
+  grid-area: 1 / 7 / 2 / 8;
+  padding: 35px 0;
+}
+
+.track-controls {
+  grid-area: 1 / 8 / 2 / 10;
+  position: relative;
+  display: grid;
+  grid-template-columns: min-content 1fr min-content;
+  align-items: center;
+  column-gap: 0.5rem;
+  height: 100%;
+  &__current-time {
+  }
+  &__output-power {
+    position: absolute;
+    bottom: 52px;
+    left: 50px;
+  }
+  &__seek-bar {
+    min-width: 200px;
+  }
+
+  // &__seek-bar::-webkit-slider-thumb {
+  //   position: relative;
+  //   width: 8px;
+  //   height: 8px;
+  // }
+  &__duration {
+  }
+}
+
+.repeat {
+  grid-area: 1 / 10 / 2 / 11;
+  padding: 35px 0;
 }
